<resources>
    <string name="app_name">Placement</string>
    <string name="logo">Logo</string>
    <string name="mgmtconsole">Management Console</string>
    <string name="plassy">PlacementApp</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="entersecuritycode">Enter security code</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="enter">Enter</string>
    <string name="login2">Already member? login</string>
    <string name="sign_up">Sign up?</string>
    <string name="sign_up2">Sign up</string>
    <string name="verify_password">Verify Password</string>
    <string name="enrollment_no">Enrollment No.</string>
    <string name="sign_out">Sign out</string>
    <string name="apply">Apply</string>
    <string name="applied">Applied</string>
    <string name="preferences">Preferences</string>
    <string name="notinterested">Not Interested</string>
    <string name="all">All</string>
    <string name="blank">None</string>
    <string name="students">Students</string>
    <string name="visited">Visited Companies</string>
    <string name="request">Request</string>
    <string name="addnewcompanydetail">Add New Company Details:</string>
    <string name="add">ADD</string>
    <string name="name">Name</string>
    <string name="rjk">Rajkot</string>
    <string name="guj">Gujarat</string>
    <string name="outguj">Out of Gujarat</string>
    <string name="domain">Domain</string>
    <string name="domain1">Company Domain 1</string>
    <string name="domain2">Company Domain 2</string>
    <string name="location1">Location 1</string>
    <string name="location2">Location 2</string>
    <string name="packages">Package</string>
    <string name="position">Position</string>
    <string name="qualification">Qualification</string>
    <string name="eligibility">Eligibility</string>
    <string name="visitdate">Visit Date</string>
    <string name="venue">Venue</string>
    <string name="time">Time</string>
    <string name="uploadpdf">Upload Pdf</string>
    <string name="allcompanies">All Companies</string>
    <string name="appliedcompanies">Applied Companies</string>
    <string name="bond">Bond</string>
    <string name="stipend">Stipend</string>
    <string name="jobtype">Job Type</string>
    <string name="reportingtime">Reporting \nTime</string>
    <string name="reason">Reason</string>
    <string name="downloadpdf">donwlodaPDF</string>
    <string name="allstudents">All Students</string>
    <string name="studentsdetail">Student Details</string>
    <string name="lastdate">Last date</string>
    <string name="update">Upload pdf</string>
    <string name="aboutus1">PlacementApp is developed for VVPians with a vision that none should miss an interview.It provides transparency between faculties and students.\n</string>
    <string name="aboutus2">\"A perfect guide for a perfect future\"</string>
    <string name="creditsHead">Developed &amp; Designed By:</string>
    <string name="credits1">Vikas Padaliya\nvikas33padaliya@gmail.com</string>
    <string name="credits2">Rohan Padariya\nrohanpadariya_97@yahoo.com</string>
    <string name="appliedstudents">Applied students list</string>
    <string name="studentswhoapplied">Students who have applied</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_notification">Send Notification</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="send">Send</string>
</resources>
