<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.95"
        android:orientation="vertical"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:gravity="center"
        tools:context=".loginActivity">
        <ImageView
            android:layout_width="100dp"
            android:contentDescription="@string/logo"
            android:layout_height="100dp"
            android:src="@drawable/plassy_ps"
            android:layout_marginBottom="40dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/AppThird"
            android:textColor="@color/AppSecondary"
            android:textSize="15sp"
            android:id="@+id/eml"
            android:gravity="center"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/line"
            android:alpha="0.75"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
        <EditText
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:textSize="15sp"
            android:id="@+id/pass"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/AppThird"
            android:textColor="@color/AppSecondary"
            android:background="@android:color/transparent"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:textColor="@color/AppMain"
            android:text="@string/login"
            android:textAllCaps="false"
            android:id="@+id/loginButt"
            android:background="@drawable/button_1"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/txt_forgotpass"
            android:layout_marginTop="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgotpassword"
            android:textColor="@color/AppMain" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lsignupButt">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginBottom="12dp"
            android:textColor="@color/AppMain"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>