<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/extra_small_bg"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_alignParentStart="true"
                android:text="@string/addnewcompanydetail"
                android:layout_marginStart="-4dp"
                android:background="@drawable/textbg1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:id="@+id/btn_fac_save"
                android:background="@drawable/textbg_right"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:contentDescription="@string/add"
                    android:src="@mipmap/ic_plus_circle_outline_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:text="@string/add"
                    android:paddingBottom="2dp"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingTop="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_height="wrap_content"
                tools:context=".add_company"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edt_fac_com_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="text"
                        android:hint="@string/name"/>
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp">
                    <android.support.v7.widget.AppCompatCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edt_fac_com_raj"
                        android:checked="false"
                        app:buttonTint="#000000"
                        android:text="@string/rjk"/>
                    <android.support.v7.widget.AppCompatCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:id="@+id/edt_fac_com_outraj"
                        android:checked="false"
                        app:buttonTint="#000000"
                        android:text="@string/guj"/>
                    <android.support.v7.widget.AppCompatCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:id="@+id/edt_fac_com_gujout"
                        android:checked="false"
                        app:buttonTint="#000000"
                        android:text="@string/outguj"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <EditText
                            android:id="@+id/edt_fac_com_domain1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:hint="@string/domain1"
                            android:inputType="text"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <EditText
                            android:id="@+id/edt_fac_com_domain2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="text"
                            android:hint="@string/domain2" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <EditText
                            android:id="@+id/edt_fac_com_loc1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="text"
                            android:hint="@string/location1" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <EditText
                            android:id="@+id/edt_fac_com_loc2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="text"
                            android:hint="@string/location2" />
                    </android.support.design.widget.TextInputLayout>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/edt_fac_com_bond"
                        android:prompt="@string/applied"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5">
                        <EditText
                            android:id="@+id/edt_fac_com_package"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:hint="@string/packages"
                            android:inputType="numberDecimal"/>
                    </android.support.design.widget.TextInputLayout>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/edt_fac_com_stipend"

                        android:prompt="@string/app_name"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5">
                        <EditText
                            android:id="@+id/edt_fac_com_position"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="text"
                            android:hint="@string/position"/>
                    </android.support.design.widget.TextInputLayout>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/edt_fac_com_jobtype"
                        />
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edt_fac_com_qualification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/qualification"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edt_fac_com_eligiblity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="text"
                        android:hint="@string/eligibility"/>
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2">
                        <EditText
                            android:id="@+id/edt_fac_com_venue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:singleLine="true"
                            android:hint="@string/venue"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/edt_fac_com_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:focusable="false"
                            android:inputType="time"
                            android:hint="@string/time"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/edt_fac_com_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="date"
                            android:focusable="false"
                            android:hint="@string/visitdate" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/edt_fac_com_lastdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:focusable="false"
                            android:inputType="time"
                            android:hint="@string/lastdate"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/pdf_uploadButt"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_left"
                    android:paddingEnd="15dp"
                    android:paddingStart="10dp"
                    android:text="@string/uploadpdf"
                    android:textColor="@color/AppMain"
                    android:textSize="15sp" />

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/check_pdf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/update"
                        app:buttonTint="#000000" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>