<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".credit_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/list_content1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creditsHead"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits1"
                android:textColor="@color/AppThird"
                android:textSize="15sp"
                android:layout_marginBottom="7dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits2"
                android:textColor="@color/AppThird"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>