<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg1"
    tools:context=".AllCompany">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/extra_small_bg"
        android:gravity="start|center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/send_notification"
            android:textSize="18sp"
            android:layout_marginStart="-4dp"
            android:background="@drawable/textbg1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:background="@color/colorAccent2"
        android:orientation="vertical"
        android:gravity="center|top"
        android:paddingTop="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="5dp">
        <EditText
            android:gravity="center"
            android:layout_marginTop="45dp"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:hint="@string/title"
            android:background="@drawable/textbox2"/>
        <EditText
            android:gravity="center"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:paddingBottom="5dp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:hint="@string/description"
            android:id="@+id/desc"
            android:background="@drawable/textbox2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/AppMain"
            android:id="@+id/sendButt"
            android:text="@string/send"
            android:background="@drawable/button_1"/>
    </LinearLayout>
</LinearLayout>